# topology-traits

./: .gitignore  Cargo.toml  README.md  Readme.md
src/: lib.rs
test-suite/: cargo.toml
test-suite/tests/: test_linear_map_derive.rs  test_real_vector_space_derive.rs
topology-traits/: Cargo.toml
topology-traits-derive/: Cargo.toml
topology-traits-derive/src/: lib.rs
topology-traits/src/: lib.rs  palette.rs
